style: change padding to inner containers to fix clippinig

--- a/src/app/layouts/app-layout/app-layout.scss
+++ b/src/app/layouts/app-layout/app-layout.scss
@@ -119,7 +119,7 @@
 }
 
 main.content {
-  padding: 1rem 1rem 6rem;
+  padding: 0 0 6rem;
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
