--- a/src/app/pages/boards/boards.scss
+++ b/src/app/pages/boards/boards.scss
@@ -8,7 +8,7 @@
   height: 100%;
   max-height: 100%;
   overflow: auto;
-  padding-bottom: 2rem;
+  padding: 1rem 1rem 2rem;
 
   h2 {
     font-size: $font-size-M;
