--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -2,6 +2,7 @@
 @use 'mixins' as *;
 
 .home-page {
+  padding: 1rem 1rem 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -128,7 +129,7 @@
 
     .event,
     .add-event-today {
-      background-color: $color-grey;
+      background-color: $color-fff;
       border-radius: $border-radius-S;
       padding: 0 1rem;
       height: 3rem;
@@ -137,6 +138,7 @@
       position: relative;
       align-items: center;
       transition: background 0.2s ease, color 0.2s ease;
+      box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 
       &.completed {
         background-color: $color-success;
